# todo-list

./: .env  Project.py  Task.py  UI.py  User.py  alembic.ini  custum_exception.py  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py
alembic/: env.py
alembic/versions/: 137c0e86b603_add_user_table.py  2b230f913bd6_add_name_to_user.py  37bd8950a64b_remove_multi_user_and_user_table.py  88cde1ad3e99_update_length_closed_at_and_deadline_to_.py  a9a4c15199f9_add_relations.py  c25531766796_add_task_table.py  ce36911884c9_add_project_table.py
models/: project.py  task.py  user.py
poetry_todo/: pyproject.toml
todo/versions/: 3dfa919d0a49_create_task_table.py
